--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
 
         stage('Running scan') {
 
-            option {
+            options {
                 timeout(time: 10, unit: 'MINUTES')
             }
 
@@ -18,7 +18,7 @@ pipeline {
         }
     }
             post {
-                sucess {
+                success {
                     sh 'echo "All good!!!"'
                 }
             }
