fix: fixing dockerfile directory to build

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
 
             steps {
                 git 'https://github.com/capstone-project-cybersecurity/automate-scan.git'
-                sh 'docker build -t automate-scan'
+                sh 'docker build -t automate-scan .'
                 sh 'docker run automate-scan'
             }
         }
