feat: add post conditions

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -25,6 +25,11 @@ pipeline {
             post {
                 success {
                     sh 'echo "All good!!!"'
+                       emailext (
+                       to: 'daniel.gomez.amaran@gmail.com',
+                       subject: 'Jenkins Build Results',
+                       body: 'The build has completed.\n\nStatus: ${currentBuild.currentResult}',
+                       )
                 }
                 failure {
                     sh 'echo "I failed :("'
