--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -23,11 +23,12 @@ pipeline {
         }
     }
             post {
-                always {
-                    emailext (
+                success {
+                    sh 'echo "All good!!!"'
+                       emailext (
                        to: 'daniel.gomez.amaran@gmail.com',
                        subject: 'Jenkins Build Results',
-                       body: 'The build has completed',
+                       body: 'The build has completed.\n\nStatus: ${currentBuild.currentResult}',
                        )
                 }
                 failure {
