--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -25,9 +25,11 @@ pipeline {
             post {
                 success {
                     sh 'echo "All good!!!"'
+                    slackSend "Build deployed successfully - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)"
                 }
                 failure {
                     sh 'echo "I failed :("'
+                    slackSend failOnError:true message:"Build failed  - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)"
                 }
             }
 }
