--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -25,15 +25,19 @@ pipeline {
             post {
                 success {
                     sh 'echo "All good!!!"'
-                    slackSend (
-        color: '#36a64f',
-        message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} is complete: ${currentBuild.currentResult}",
-        channel: '#general',
-      )
+                        slackSend (
+                        color: '#36a64f',
+                        message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} is complete: ${currentBuild.currentResult}",
+                        channel: '#general',
+                    )
                 }
                 failure {
                     sh 'echo "I failed :("'
-                    //slackSend failOnError:true message:"Build failed  - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)"
+                          slackSend (
+                          color: '#d00000',
+                          message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} has failed!",
+                          channel: '#General',
+                    )
                 }
             }
 }
