--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
             steps {
                 git 'https://github.com/capstone-project-cybersecurity/automate-scan.git'
                 sh 'docker build -t automate-scan .'
-                sh 'docker run automate-scan'
+                sh 'docker run automate-scan || exit 1'
             }
         }
     }
