--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -2,10 +2,9 @@ pipeline {
 
     agent any
 
-    // ToDo later
-    //triggers {
-    //    cron('H */4 * * 1-5')
-    //}
+    triggers {
+        cron('H/1 * * * *')
+    }
 
     stages {
 
