--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -23,18 +23,18 @@ pipeline {
     }
             post {
                 success {
-                    sh 'echo "All good!!!"'
+                    sh 'echo "Has succeeded"'
                         slackSend (
                         color: '#36a64f',
-                        message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} is ok: ${currentBuild.currentResult}",
+                        message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} has: ${currentBuild.currentResult}! - You can review here in JOB URL: $BUILD_URL",
                         channel: '#jenkins-pentesting-jobs',
                     )
                 }
                 failure {
-                    sh 'echo "I failed :("'
+                    sh 'echo "Has failed"'
                           slackSend (
                           color: '#d00000',
-                          message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} has failed!",
+                          message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} has: ${currentBuild.currentResult}! - You can review here in JOB URL: $BUILD_URL",
                           channel: '#jenkins-pentesting-jobs',
                     )
                 }
