feat: update Jenkinsfile to manage the output of the script

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
             steps {
                 git 'https://github.com/capstone-project-cybersecurity/automate-scan.git'
                 sh 'docker build -t automate-scan .'
-                sh 'docker run automate-scan || exit 1'
+                sh 'docker run automate-scan > output.txt || exit 1'
             }
         }
     }
