test: testing workspace

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -2,6 +2,8 @@ pipeline {
 
     agent any
 
+    def workspaceUrl = "${env.JENKINS_URL}/job/${env.JOB_NAME}/${env.BUILD_NUMBER}/ws"
+
     //triggers {
     //    cron('* * * * *')
     //}
@@ -26,7 +28,7 @@ pipeline {
                     sh 'echo "Has succeeded"'
                         slackSend (
                         color: '#36a64f',
-                        message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} has: ${currentBuild.currentResult}! - You can review here in JOB URL: $BUILD_URL",
+                        message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} has: ${currentBuild.currentResult}! - You can review here in JOB URL: $BUILD_URL - You can also review the workspace URL: ${workspaceUrl}",
                         channel: '#jenkins-pentesting-jobs',
                     )
                 }
