--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -25,10 +25,10 @@ pipeline {
                 success {
                     script {
                     sh 'echo "Has succeeded"'
-                        def workspaceUrl = "${env.JENKINS_URL}job/job/${env.JOB_NAME}${env.BUILD_NUMBER}/ws"
+                        def workspaceUrl = "${BUILD_URL}/ws"
                         slackSend (
                         color: '#36a64f',
-                        message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} has: ${currentBuild.currentResult}! - You can review here in JOB URL: $BUILD_URL - also review the workspace URL: ${workspaceUrl}",
+                        message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} has: ${currentBuild.currentResult}! - You can review here in JOB URL: ${env.BUILD_URL} - also review the workspace URL: ${workspaceUrl}",
                         channel: '#jenkins-pentesting-jobs',
                     )
                     }
@@ -37,7 +37,7 @@ pipeline {
                     sh 'echo "Has failed"'
                           slackSend (
                           color: '#d00000',
-                          message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} has: ${currentBuild.currentResult}! - You can review here in JOB URL: $BUILD_URL",
+                          message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} has: ${currentBuild.currentResult}! - You can review here in JOB URL: ${env.BUILD_URL}",
                           channel: '#jenkins-pentesting-jobs',
                     )
                 }
