--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
                 success {
                     script {
                     sh 'echo "Has succeeded"'
-                        def workspaceUrl = "${BUILD_URL}/ws"
+                        def workspaceUrl = "${BUILD_URL}ws"
                         slackSend (
                         color: '#36a64f',
                         message: "Build ${env.JOB_NAME} ${env.BUILD_NUMBER} has: ${currentBuild.currentResult}! - You can review here in JOB URL: ${env.BUILD_URL} - also review the workspace URL: ${workspaceUrl}",
