--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -8,6 +8,13 @@ pipeline {
 
     stages {
 
+        stage('Cleaning workspace') {
+
+            steps {
+                sh 'rm -rf output.txt'
+            }
+        }
+
         stage('Running scan') {
 
             options {
