--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
             steps {
                 git 'https://github.com/capstone-project-cybersecurity/automate-scan.git'
                 sh 'docker build -t automate-scan .'
-                sh 'docker run automate-scan > output.txt || exit 1'
+                sh 'docker run automate-scan | tee output.txt'
             }
         }
     }
