--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -2,9 +2,9 @@ pipeline {
 
     agent any
 
-    triggers {
-        cron('*/5 * * * *')
-    }
+    //triggers {
+    //    cron('*/5 * * * *')
+    //}
 
     stages {
 
